# rag

./: .gitignore  docker-compose.yaml  mise.toml  pyproject.toml
src/rag/: __init__.py  instrumentation.py  main.py  settings.py  utils.py
src/rag/api/: auth.py  dependencies.py  lifespan.py  server.py  state.py
src/rag/models/: loaders.py  query_response.py
src/rag/services/: image_manager.py  qdrant.py
