[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colpali-engine>=0.3.10",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "qdrant-client>=1.14.2",
    "tenacity>=9.1.2",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "typer>=0.16.0",
]

[dependency-groups]
dev = ["ruff>=0.11.13"]
