[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.23.0",
    "arize-phoenix>=10.13.2",
    "colpali-engine>=0.3.10",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "langgraph>=0.4.8",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-exporter-prometheus>=0.55b1",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "opentelemetry-instrumentation-httpx>=0.55b1",
    "opentelemetry-instrumentation-logging>=0.55b1",
    "opentelemetry-sdk>=1.34.1",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.18",
    "pydantic-settings>=2.9.1",
    "pynacl>=1.5.0",
    "qdrant-client>=1.14.2",
    "scalar-fastapi>=1.0.3",
    "tenacity>=9.1.2",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = ["ruff>=0.11.13"]
